--- a/site/site.html
+++ b/site/site.html
@@ -52,6 +52,15 @@ html_content = """
             <span class="feature-icon">💳</span>
             <h3>پرداخت امن</h3>
             <p>تنوع در روش‌های پرداخت</p>
+        </div> 
+        <div class="feature-item">
+            <span id="span1" class="feature-icon">👥</span>
+            <a id="a22" href="درباره ما.html">درباره ما</a>
+            <p>توضیحات</p>
+            <div class="feature-item">
+            <span id="span1" class="feature-icon">📞</span>
+            <a id="a22" href="تماس با ما.html">تماس با ما</a>
+            <p>پاسخگویی به سوالات شما</p>
         </div>
     </section>
 
