--- a/site/site.html
+++ b/site/site.html
@@ -1,4 +1,4 @@
-html_content = """
+
 <!DOCTYPE html>
 <html lang="fa" dir="rtl">
 <head>
@@ -11,16 +11,17 @@ html_content = """
     <header class="header">
         <div class="logo">Childrens</div>
         <nav class="nav-links">
+            <a href="site.html" id="al1" >صفحه اصلی</a>
             <a href="#">تازه‌ها</a>
             <a href="#">دخترانه</a>
             <a href="#">پسرانه</a>
             <a href="#">تخفیف‌ها</a>
-            <a href="#">بلاگ</a>
+            <a href="درباره ما.html">درباره ما</a>
         </nav>
         <div class="icons">
             <span class="icon">🔍</span>
             <span class="icon">🛒</span>
-            <span class="icon">👤</span>
+            <a href="login page.html" id="aicons" >👤</a>
         </div>
     </header>
 
@@ -29,6 +30,11 @@ html_content = """
             <h1>مجموعه جدید و شاد لباس‌های تابستانی</h1>
             <p>کیفیت و راحتی را با طرح‌های جذاب برای کودکان شما فراهم کرده‌ایم.</p>
             <button class="cta-button">مشاهده محصولات</button>
+            
+        </div>
+        <div id="img1" >
+        <img src="identical-quadruplets-noelle-mirabella-1.jpg" alt="">
+
         </div>
     </main>
 
@@ -54,9 +60,7 @@ html_content = """
             <p>تنوع در روش‌های پرداخت</p>
         </div> 
         <div class="feature-item">
-            <span id="span1" class="feature-icon">👥</span>
-            <a id="a22" href="درباره ما.html">درباره ما</a>
-            <p>توضیحات</p>
+            
             <div class="feature-item">
             <span id="span1" class="feature-icon">📞</span>
             <a id="a22" href="تماس با ما.html">تماس با ما</a>
