--- a/site/درباره ما.html
+++ b/site/درباره ما.html
@@ -8,10 +8,22 @@
     <link rel="stylesheet" href="site.css">
 </head>
 <body>
-    <header>
-        <h1>درباره ما: جایی که راحتی و شادی در هم تنیده می‌شوند.</h1>
+    <header class="header">
+        <div class="logo">Childrens</div>
+        <nav class="nav-links">
+            <a href="site.html">صفحه اصلی</a>
+            <a href="#">تازه‌ها</a>
+            <a href="#">دخترانه</a>
+            <a href="#">پسرانه</a>
+            <a href="#">تخفیف‌ها</a>
+            <a href="درباره ما.html" id="adar" >درباره ما</a>
+        </nav>
+        <div class="icons">
+            <span class="icon">🔍</span>
+            <span class="icon">🛒</span>
+            <a href="login page.html" id="aicons" >👤</a>
+        </div>
     </header>
-
     <main class="about-container">
         <section class="core-story">
             <h2>قلب تپنده ما</h2>
